src/app/components/explorer/explorer.component.scss
@import '../../styles/variables';
@import '../../styles/distractionFree';

.explorer {
  background-color: $c_bg_boxes;
  height: 100%;
  overflow: auto;
}

.project-icon mat-icon {
  width: 18px;
}

.project-name {
  background-color: $c_bg_boxes;
  position: sticky;
  top: 0;
  z-index: 10;

  display: flex;
  align-items: center;

  .name {
    flex-grow: 2;
  }
}

.menu-button mat-icon {
  font-size: 18px;
}

